--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<% flash.each do |type, message| %>
+      <div>
+        <strong>Note:<%= type %>! <%= message %></strong>
+      </div>
+    <% end %>
 <%= yield %>
 
 </body>
