can destroy. crud

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,6 @@
 <h1><%= @post.title %></h1>
 <br />
 <p><%= @post.body %></p>
+<%= link_to "delete", post_path(@post), method: :delete %><br />
+<%= link_to "edit", edit_post_path(@post) %><br />
+<%= link_to "<< Back to Articles List", posts_path %>
