--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,4 +3,5 @@
 <p><%= @post.body %></p>
 <%= link_to "delete", post_path(@post), method: :delete %><br />
 <%= link_to "edit", edit_post_path(@post) %><br />
-<%= link_to "<< Back to Articles List", posts_path %>
+<br />
+<%= link_to "< back to list", posts_path %>
