--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<p><%= link_to "Home", users_path %> <%= link_to "New User", new_user_path %></p>
 <%= yield %>
 
 </body>
