RESTful methods up and running. Flash notices working. All systems GO

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 <p><%= link_to "Home", users_path %> <%= link_to "New User", new_user_path %></p>
+<p class="flash"><%= flash.notice %></p>
 <%= yield %>
 
 </body>
