--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,3 +2,5 @@
 <p><b>First Name:</b> <%= @user.first_name %></p>
 <p><b>Last Name:</b> <%= @user.last_name %></p>
 <p><b>Bio:</b> <%= @user.bio %></p>
+<%= link_to "Edit User", edit_user_path %><br>
+<%= link_to "Delete User", user_path(@user), method: :delete, data: {confirm: "Really delete this user?"} %>
