add Delete and fix Update

--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -4,3 +4,4 @@
 <p>Category: <%= @note.category%></p>
 
 <%= link_to "Edit Note", edit_note_path %>
+<%= link_to "Delete Note", @note, :method => :delete %>
