--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,4 +1,5 @@
 <li>
   <%= link_to note.body, note_path(note.id) %>
   <%= link_to "(#{note.category})", "#" unless note.category.empty? %>
+  <small><%= link_to "Delete", note, :method => :delete %></small>
 </li>
