--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,12 +1,7 @@
 <h1>Note to Self:</h1>
 
-<%= form_for @note do |n| %>
-  <%= n.text_area :body, size: "60x6" %><br>
 
-  <%= label_tag(:category, "Category:") %>
-  <%= n.text_field :category %><br>
+<%= render :partial => "form", :locals => { :note => @note } %>
 
-  <%= n.submit "Save Note"%>
-<% end %>
 
 <%= link_to "Delete Note", @note, :method => :delete %>
