--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,5 @@
-<h1>Create a new user</h1>
+<%= form_for @user do |user_form| %>
 
-<%= form_for @user, url: {action: "create"} do |user_form| %>
   <%= user_form.label :username %>
   <%= user_form.text_field :username %><br>
 
@@ -11,4 +10,5 @@
   <%= user_form.text_field :password %><br>
 
   <%= user_form.submit %>
+
 <% end %>
