--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,10 +1,3 @@
 new!
-<%= form_for(@post) do |p| %>
-  <%= p.label :title %>
-  <%= p.text_field :title %>
-
-  <%= p.label :body %>
-  <%= p.text_area :body %>
-  <%= p.submit %>
-
-<% end %>
+<%= render partial: 'form' %>
+<%= link_to "All posts", posts_path %>
