--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -20,7 +20,7 @@
         <td><%= dog.breed %></td>
         <td><%= dog.age %></td>
         <td><%= link_to 'Edit', edit_dog_path(dog) %></td>
-        <td>Delete</td>
+        <td><%= link_to 'Delete', dog_path(dog), method: :delete, data: {confirm: 'Are you sure?'} %></td>
       </tr>
     <% end %>
   </tbody>
