Adds flash messages and validation to test flashes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+<% flash.each do |type, message| %>
+  <p>
+    <%= type.capitalize %>: <%= message %>
+  </p>
+<% end %>
+
 <%= yield %>
 
 </body>
