--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,13 @@
 </head>
 <body>
 
-<%= yield %>
+  <% flash.each do |type, message| %>
+    <div>
+      <strong><%= type %>! <%= message %></strong>
+    </div>
+  <% end %>
+
+  <%= yield %>
 
 </body>
 </html>
