--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,7 @@
 
 <% @articles.each do |article| %>
 
-  <li><%= article.title %></li>
+  <li><%= link_to article.title, article %></li>
 
 <% end %>
 
