--- a/cruddy_app/app/views/users/index.html.erb
+++ b/cruddy_app/app/views/users/index.html.erb
@@ -1,6 +1,10 @@
 <h1>All Users</h1>
 
+<ul>
 <% @users.each do |user| %>
-  <h3><%= link_to "#{user.first_name} #{user.last_name}", user_path(user.id) %></h3>
-  <p><%= "#{user.email}" %></p>
+  <li><%= link_to "#{user.first_name} #{user.last_name}", user_path(user.id) %>
+  <%= "#{user.email}" %>
+  <%= link_to "Edit", edit_user_path(user.id) %>
+  <%= link_to "Delete", user_path(user.id), method: :delete, data: { confirm: "Really delete this user?"} %></li>
 <% end %>
+</ul>
