--- a/cruddy_app/app/views/users/show.html.erb
+++ b/cruddy_app/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <h1>User Information</h1>
-  <ul>
-    <li> User Name : <%= @user.first_name %>, <%= @user.last_name %> </li>
-    <li> Email : <%= @user.email %> </li>   
-  </ul>
+<ul>
+  <li> User Name : <%= @user.first_name %>, <%= @user.last_name %> </li>
+  <li> Email : <%= @user.email %> </li>
+</ul>
 
+<%= link_to "Edit", edit_user_path(@user.id) %>
+<%= link_to "Delete", user_path(@user.id), method: :delete, data: { confirm: "Really delete this user?"} %>
