completed the crud

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,14 @@
 </head>
 <body>
 
+  <% flash.each do |type, message| %>
+    <div>
+      <strong><%= type %>! <%= message %></strong>
+    </div>
+  <% end %>
+
 <%= yield %>
 
 </body>
+
 </html>
