--- a/app/views/robots/edit.html.erb
+++ b/app/views/robots/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit Robot</h1>
-<%= form_for(@robot, :url => robot_path) do |f| %>
+<%= form_for(@robot) do |f| %>
 	<%= f.label(:name) %>
 	<%= f.text_field(:name) %>
 	<%= f.label(:story) %>
