--- a/app/views/robots/new.html.erb
+++ b/app/views/robots/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Robot</h1>
-<%= form_for(@robot, :url => robots_path) do |f| %>
+<%= form_for(@robot) do |f| %>
 	<%= f.label(:name) %>
 	<%= f.text_field(:name) %>
 	<%= f.label(:story) %>
